:bug: fix: finalização do projeto